--- a/FrontEnd/connexion.html
+++ b/FrontEnd/connexion.html
@@ -29,11 +29,11 @@
             <h2>Log In</h2>
             <div class="input-group">
                 <label for="email">E-mail</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" autocomplete="email" required>
             </div>
             <div class="input-group">
                 <label for="password">Mot de passe</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" autocomplete="current-password" required>
             </div>
             <button type="submit">Se connecter</button>
             <a href="#">Mot de passe oublié</a>
