--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,6 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="index.js" defer></script>
@@ -44,15 +45,36 @@
 		</h2>
 		
 		<div class="categories"></div>
-		<div class="gallery"></div>
+		<div class="gallery" id="index-gallery"></div>
 	</section>
 	<div id="editModal" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeEditModal()">&times;</span>
-            <div class="edit-gallery">
+            <span class="close">&times;</span>
+			<h2>Galerie photo</h2>
+            <div class="edit-gallery" id="gallery">
+				
             </div>
+			<button id="openAddPhotoModal">Ajouter une photo</button>
         </div>
     </div>
+	<div id="addPhotoModal" class="modal">
+		<div class="modal-content">
+			<span class="close-button" id="closeAddPhotoModal">&times;</span>
+			<h2>Ajouter une photo</h2>
+			<form id="addPhotoForm">
+				<label for="title">Titre :</label>
+				<input type="text" name="title" required>
+				<select id="category" name="category" required>
+					<option value="">Sélectionnez une catégorie</option>
+				</select>
+	
+				<label for="image">Image :</label>
+				<input type="file" name="image" accept="image/*" required>
+	
+				<button type="submit">Ajouter</button>
+			</form>
+		</div>
+	</div>
 	<section id="contact">
 		<h2>Contact</h2>
 		<p>Vous avez un projet ? Discutons-en !</p>
