Fix de l'envoie a l'API ( Error 500 actuellement )

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -59,7 +59,7 @@
     </div>
 	<div id="addPhotoModal" class="modal">
 		<div class="modal-content">
-			<span class="close-button" id="closeAddPhotoModal">&times;</span>
+			<span class="close" id="closeAddPhotoModal">&times;</span>
 			<h2>Ajouter une photo</h2>
 			<form id="addPhotoForm">
 				<label for="title">Titre :</label>
